--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cupertino_icons: ^1.0.2
   http: ^1.1.0
+  file_picker: ^8.0.0+1  # Update this - was ^6.1.1
+  url_launcher: ^6.2.2
   shared_preferences: ^2.2.2
-  file_picker: ^6.1.1  # For resume file picking
 
 dev_dependencies:
   flutter_test:
